k8s-manifests/page1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: page1-service
spec:
  selector:
    app: page1
  ports:
  - port: 80
    targetPort: 80
