k8s-manifests/page2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: page2-service
spec:
  selector:
    app: page2
  ports:
  - port: 80
    targetPort: 80
