k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: html-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /page1
        pathType: Prefix
        backend:
          service:
            name: page1-service
            port:
              number: 80
      - path: /page2
        pathType: Prefix
        backend:
          service:
            name: page2-service
            port:
              number: 80
